<package>

  <name>social_worlds</name>
  <version>0.1.0</version>
  <description>
    <p>Description package for social_worlds</p>
    <p>This package contains configuration data, 3D models and launch files
for social_worlds</p>
  </description>
  <author>me</author>
  <maintainer email="me@email.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>object_recognition_msgs</build_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>object_recognition_msgs</run_depend>

  <export>
    <architecture_independent />
  </export>

</package>
